# whisper-agent

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml  whisper-agent.toml  whisper-agent.toml.example
.github/workflows/: android.yml  ci.yml  release.yml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/gradle/: libs.versions.toml
assets/icon/: generate.py
buckets/wikipedia_simple/: bucket.toml
crates/whisper-agent-aetna-ui/: Cargo.toml
crates/whisper-agent-aetna-ui/assets/: index.html  login.html
crates/whisper-agent-aetna-ui/examples/: dump_bundles.rs
crates/whisper-agent-aetna-ui/src/: app.rs  branding.rs  cron_preview.rs  icons.rs  lib.rs  login.rs  web_entry.rs
crates/whisper-agent-auth/: Cargo.toml
crates/whisper-agent-auth/src/: auth.rs  client.rs  codex.rs  lib.rs
crates/whisper-agent-desktop/: Cargo.toml
crates/whisper-agent-desktop-aetna/: Cargo.toml
crates/whisper-agent-desktop-aetna/src/: config.rs  main.rs
crates/whisper-agent-desktop/src/: config.rs  login.rs  main.rs
crates/whisper-agent-host-daemon/: Cargo.toml
crates/whisper-agent-host-daemon/src/: catalog.rs  config.rs  connection.rs  credentials.rs  lib.rs  main.rs  runas.rs  sessions.rs  worker.rs
crates/whisper-agent-host-daemon/tests/: connection.rs
crates/whisper-agent-host-proto/: Cargo.toml
crates/whisper-agent-host-proto/src/: background.rs  call.rs  connection.rs  credential.rs  hook.rs  lib.rs  session.rs
crates/whisper-agent-mcp-fetch/: Cargo.toml
crates/whisper-agent-mcp-fetch/src/: main.rs  server.rs  tools.rs
crates/whisper-agent-mcp-host/: Cargo.toml
crates/whisper-agent-mcp-host/src/: ipc.rs  main.rs  protocol.rs  runas.rs  server.rs  tools.rs  workspace.rs
crates/whisper-agent-mcp-imagegen/: Cargo.toml
crates/whisper-agent-mcp-imagegen/src/: codex.rs  config.rs  main.rs  server.rs  tools.rs  watcher.rs
crates/whisper-agent-mcp-proto/: Cargo.toml
crates/whisper-agent-mcp-proto/src/: lib.rs
crates/whisper-agent-mcp-search/: Cargo.toml
crates/whisper-agent-mcp-search/src/: main.rs  server.rs  tools.rs
crates/whisper-agent-protocol/: Cargo.toml
crates/whisper-agent-protocol/src/: behavior.rs  conversation.rs  lib.rs  permission.rs  pod.rs  sandbox.rs  tool_schema.rs  tool_surface.rs
crates/whisper-agent-sandbox/: Cargo.toml
crates/whisper-agent-sandbox/src/: main.rs  provision.rs
crates/whisper-agent-webui/: Cargo.toml  index.html
crates/whisper-agent-webui/.cargo/: config.toml
crates/whisper-agent-webui/assets/: index.html  login.html
crates/whisper-agent-webui/src/: app.rs  cron_preview.rs  editor.rs  fonts.rs  lib.rs  main.rs
crates/whisper-agent-webui/src/app/: chat_render.rs  conversion.rs  editor_render.rs  modals.rs  sidebar.rs  widgets.rs  wire_handler.rs
crates/whisper-agent-webui/src/app/modals/: behavior_editor.rs  buckets.rs  fork.rs  new_behavior.rs  new_pod.rs  pod_editor.rs  provider_editor.rs  settings.rs  viewers.rs
crates/whisper-agent-worker-proto/: Cargo.toml
crates/whisper-agent-worker-proto/src/: lib.rs
docs/: design_aetna_ui.md  design_arxiv_bucket.md  design_behaviors.md  design_functions.md  design_headless_loop.md  design_host_env_protocol.md  design_knowledge_db.md  design_mvp.md  design_permissions.md  design_permissions_rework.md  design_pod_thread_scheduler.md  design_session_thread_scheduler.md  design_task_scheduler.md  progress_knowledge_db.md  research_anthropic_api.md  research_cli_capture_comparison.md  research_tool_protocols.md
docs/captures/: claude-run.md  codex-run.md  gemini-run.md
docs/captures/transcripts/: claude.json
docs/research/: auto_mode_claude_code.md  compaction_claude_code.md  context_mavis.md  context_whisper_tensor.md  industry_apis.md
packaging/aur/: .SRCINFO  PKGBUILD  ensure-control-token.sh  host-daemon.env  sandbox.env  whisper-agent-host-daemon.service  whisper-agent-host.install  whisper-agent-sandbox.service
packaging/docker/: entrypoint.sh
scripts/: dev.sh  dev_aetna.sh  probe_prompt_cache.sh  probe_responses_api.sh
src/: agent_loop.rs  anthropic.rs  audit.rs  builtin_tools.rs  codex_auth.rs  config.rs  conversation.rs  gemini.rs  gemini_auth.rs  io_dispatch.rs  knowledge.rs  lib.rs  main.rs  mcp.rs  mcp_oauth.rs  model.rs  openai_chat.rs  openai_responses.rs  persist.rs  pod.rs  providers.rs  resources.rs  runtime.rs  sandbox.rs  scheduler.rs  server.rs  task.rs  task_manager.rs  task_router.rs  thread.rs  thread_router.rs  tools.rs  turn.rs
src/functions/: mod.rs
src/knowledge/: bucket.rs  build_state.rs  chunker.rs  chunks.rs  config.rs  dense.rs  disk_bucket.rs  feed_state.rs  feed_worker.rs  gc.rs  manifest.rs  planned_log.rs  query.rs  registry.rs  slot.rs  source.rs  source_index.rs  sparse.rs  tombstones.rs  types.rs  vectors.rs
src/knowledge/source/: feed.rs  markdown_dir.rs  mediawiki_xml.rs  parallel_bz2.rs  wikitext_plaintext.rs
src/permission/: mod.rs
src/pod/: behaviors.rs  config.rs  fs.rs  persist.rs  resources.rs
src/providers/: anthropic.rs  codex_auth.rs  codex_usage.rs  embedding.rs  gemini.rs  gemini_auth.rs  llamacpp.rs  model.rs  openai_chat.rs  openai_responses.rs  rerank.rs  tei.rs
src/runtime/: audit.rs  forensics.rs  io_dispatch.rs  memory_snapshot.rs  scheduler.rs  thread.rs  tool_listing.rs  v2_dispatch.rs
src/runtime/scheduler/: behaviors.rs  bindings.rs  buckets.rs  client_messages.rs  compaction.rs  config_updates.rs  dispatch.rs  feed_workers.rs  functions.rs  retention.rs  server_config.rs  thread_config.rs  triggers.rs
src/server/: auth.rs  thread_router.rs
src/tools/: about_docs.rs  builtin_tools.rs  host_env_catalog.rs  mcp.rs  pod_about_docs.rs  sandbox.rs  shared_mcp_catalog.rs
src/tools/builtin_tools/: about.rs  behavior_control.rs  describe_tool.rs  dispatch_thread.rs  drain_knowledge_nudges.rs  filesystem.rs  find_tool.rs  grep.rs  knowledge_modify.rs  knowledge_query.rs  list_host_env_providers.rs  (+8 more)
tools/arxiv_filter/: README.md  STAGE3_RUNBOOK.md  bootstrap.sh  drive.py  filter.py  watchdog.sh
(+39 files in other folders)
