[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
# Each crate declares its own `version` so components can be bumped
# independently. `edition` and `license` stay shared.
edition = "2024"
license = "MIT OR Apache-2.0"

# Shared dependency specs. Consumers inherit with `{ workspace = true }`
# and may add extra features per-crate. Deps with divergent
# `default-features` across crates (toml, chrono) are intentionally left
# out — they stay inline.
[workspace.dependencies]
# Async runtime. Workspace features are the subset every consumer
# needs; each crate adds its own (fs, io-util, net, process, sync,
# io-std) on top.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }

# Serde ecosystem
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI — crates that read env vars add `env` on top.
clap = { version = "4", features = ["derive"] }

# Errors
thiserror = "2"
anyhow = "1"

# HTTP server / client
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Time
chrono-tz = "0.10"
cron = "0.16"

# Misc utilities
url = "2"
subtle = "2"
regex = "1"

# Internal crates
whisper-agent-protocol = { path = "crates/whisper-agent-protocol" }
whisper-agent-mcp-proto = { path = "crates/whisper-agent-mcp-proto" }

[package]
name = "whisper-agent"
description = "Server-resident agent loop that reaches into managed POSIX hosts via MCP"
version = "0.3.9"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "whisper-agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["fs", "io-util", "sync", "net"] }
# `CancellationToken` — per-thread cancel signal threaded through
# model/tool/MCP I/O so a user cancel really aborts in-flight HTTP
# requests instead of just discarding their result on return.
tokio-util = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
url = { workspace = true }
futures = "0.3"
async-stream = "0.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["env"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
chrono-tz = { workspace = true }
cron = { workspace = true }
axum = { workspace = true, features = ["ws"] }
# axum 0.8 itself doesn't expose a TLS server. axum-server provides
# `bind_rustls`; the `tls-rustls` feature drops in tokio-rustls + the
# rustls cert/key file loaders we need for `--tls-cert`/`--tls-key`.
axum-server = { version = "0.8", features = ["tls-rustls"] }
# Direct rustls dep to call `crypto::ring::default_provider()`
# `.install_default()` once at startup. Both `aws-lc-rs` and `ring`
# arrive transitively (reqwest via hyper-rustls uses ring;
# axum-server/rustls default to aws-lc-rs), and rustls 0.23 panics on
# the first TLS use if both are active without an explicit pick.
# Keep it on `ring` to match reqwest's chain — avoids dragging in the
# aws-lc-sys NASM build for an otherwise-unused crypto path.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tower-http = { version = "0.6", features = ["trace"] }
# `rust-embed` bakes the webui pkg/ + assets/ trees into the release
# binary. In debug builds (default features) it reads from disk, so
# `cargo run` in this repo still picks up live edits to assets and
# wasm-pack output without a rebuild.
rust-embed = "8"
mime_guess = "2"
whisper-agent-protocol = { workspace = true }
toml = "1"
base64 = "0.22"
regex = { workspace = true }
bitflags = { version = "2", features = ["serde"] }
subtle = { workspace = true }
# OAuth 2.1 + PKCE for shared-MCP-host authorization: `rand` mints
# per-flow state + PKCE verifiers; `sha2` hashes the verifier into
# the S256 code_challenge presented on the authorization URL.
rand = "0.9"
sha2 = "0.10"
# blake3 for chunk-id hashing in the knowledge-bucket layer. Multi-GB/s
# throughput matters because the chunker hashes every source record on a
# wikipedia-scale build — sha2 would bottleneck the chunking stage.
blake3 = "1"
# HNSW dense-vector index for the knowledge-bucket layer. Rust-native,
# supports the build + search + (eventual) persistence operations the
# slot's dense path needs.
hnsw_rs = "0.3"
# BM25 / sparse-text index for the knowledge-bucket layer. Tantivy is
# the de-facto Lucene-equivalent in Rust; segment-based, mature, and
# composes cleanly with our slot directory layout (one tantivy
# directory per slot).
tantivy = "0.24"
# Streaming XML parser for the MediaWiki source adapter — wikipedia
# dumps are far too large to parse with a DOM-style API. quick-xml
# exposes pull-style events that let us walk a 22 GB enwiki dump
# page-by-page while holding only one page in memory.
quick-xml = "0.39"
# bz2 decompression for the MediaWiki adapter — wikipedia ships its
# dumps as `.xml.bz2`. The C-backed `bzip2` crate gives a streaming
# `Read` impl over the compressed file; we wrap it in `BufReader`
# before handing to quick-xml so chunked decompression overlaps with
# parsing.
bzip2 = "0.5"
# Real BPE tokenizer for chunk-boundary stability across embedder
# rotations. The chunker takes token-level offsets from `Encoding` and
# slices the source text at exact token-count boundaries — chunk text
# is always a contiguous substring of the source. `onig` (the default
# regex backend) pulls in a C dep we don't need; `unstable_wasm` flag
# disables it.
tokenizers = { version = "0.21", default-features = false, features = ["onig", "esaxx_fast"] }
# HuggingFace Hub client for auto-fetching `tokenizer.json` when the
# bucket's chunker is set to `tokenizer = "auto"` and resolves to a
# model id via the embedder. Sync API is fine — resolution happens
# once at slot-build start, not on the hot path.
hf-hub = { version = "0.4", default-features = false, features = ["rustls-tls", "ureq"] }
# memmap2 for the slot's chunks.bin / vectors.bin readers. Replaces a
# `Mutex<File>` + seek+read per fetch — concurrent queries no longer
# serialize on a single file handle, and a slot's working set lives
# in the OS page cache. Used as the disk-backed serving mode; the RAM
# mode is implemented by eagerly reading the whole file into a Vec at
# slot-open time.
memmap2 = "0.9"

# `half` for f16 quantization in vectors.bin. Already in the lock file
# transitively (hnsw_rs / tantivy pull it in); listed explicitly so we
# can name the type. No `serde` feature needed — vectors.bin uses
# `to_le_bytes` directly, not a serde encoding.
half = "2"

[dev-dependencies]
# Tempdirs for source-adapter / chunker tests. Auto-cleanup via Drop.
tempfile = "3"
# `ahash` is transitive via the `tokenizers` crate; the chunker tests
# build a `WordLevel` vocab map directly, and the builder requires an
# `AHashMap` (not `std::HashMap`). Listed explicitly so test code can
# name the type.
ahash = "0.8"
