[package]
name = "whisper-agent-aetna-ui"
description = "Browser + native chat UI for whisper-agent (aetna)"
version = "0.3.23"
edition.workspace = true
license.workspace = true

[lib]
# `cdylib` is the wasm-pack bundle the server ships to the browser
# (entry point: `src/web_entry.rs`); `rlib` is what
# `whisper-agent-desktop-aetna` consumes for the native client.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Aetna lives in a sibling worktree under active development; uncomment
# the path specs when testing unreleased UI/runtime fixes locally.
aetna-core = "0.3.6"
aetna-markdown = "0.3.6"
# aetna-core = { path = "../../../../aetna/aetna.main/crates/aetna-core" }
# aetna-markdown = { path = "../../../../aetna/aetna.main/crates/aetna-markdown" }

whisper-agent-protocol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
log = "0.4"
chrono = "0.4"
chrono-tz = { workspace = true }
cron = { workspace = true }
# Cross-target Instant — `std::time::Instant::now()` panics on
# wasm32-unknown-unknown, so we use the web-time shim which aliases
# std on native and backs to `performance.now()` in the browser. Used
# by `web_entry.rs` (per-frame timing buckets) and `app.rs` (live
# tokens-per-second header chip's elapsed-time anchor).
web-time = "1"
# Round-trip the structured pod editor's `working_config` through
# the raw-TOML tab. `default-features = false` drops `std` features
# we don't need — only the display/parse/serde paths matter here.
toml = { version = "1", default-features = false, features = ["display", "parse", "serde"] }
# Decode inbound `ContentBlock::Image { source: Bytes }` at render
# time. Format set mirrors the protocol's `ImageMime` variants the
# server adapters accept (HEIC/HEIF land as a placeholder for now —
# the `image` crate doesn't decode them without an extra C library).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif"] }
# Line-granularity diff used to render `edit_file` / `write_file`
# tool calls as +/- colored bodies. Default features off since we
# only need the text path.
similar = { version = "3", default-features = false, features = ["text"] }

# Native-only file picker for the compose attach affordance.
# `default-features = false` drops the GTK3 native backend in
# favor of xdg-portal where available. `tokio = "rt"` is the
# smallest feature that gives us a single-threaded executor we
# can `block_on` inside a background thread to drive rfd's async
# API.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }
tokio = { workspace = true, features = ["rt"] }
# Native clipboard read for image paste in the compose bar. Default
# features (including `image-data`) are required for
# `Clipboard::get_image()`. Wasm handles paste via the document-level
# `install_paste_handler` in web_entry.rs and doesn't need this dep.
arboard = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
# Routes `log` records to the browser console. The egui sibling
# pulled the same role through `eframe::WebLogger`; aetna has no
# bundled equivalent so we wire it explicitly.
console_log = "1"
js-sys = "0.3"
# Reusable wgpu+winit browser host for Aetna apps. `aetna-web`
# parameterizes its `Host<A: App>` and exposes `start_with_config` +
# a `WebHandle::request_redraw` shim, so `web_entry.rs` only carries
# whisper-agent-specific glue (WebSocket, drag-drop files, image-paste)
# instead of the full wgpu/winit bootstrap.
aetna-web = "0.3.6"
# aetna-web = { path = "../../../../aetna/aetna.main/crates/aetna-web" }
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "Event",
    "Location",
    "Window",
    "Document",
    "Element",
    "KeyboardEvent",
    "HtmlCanvasElement",
    "HtmlAnchorElement",
    "HtmlElement",
    "Node",
    "BinaryType",
    "Storage",
    # ResizeObserver re-syncs the canvas backing buffer to its CSS
    # box size whenever the layout changes. Without it the canvas
    # defaults to 300x150 device pixels and Firefox WebGPU fails the
    # first present because surface texture and canvas drawing buffer
    # disagree.
    "ResizeObserver",
    # Document-level drag/drop and clipboard-paste listeners feed
    # AttachmentIngress. Mirrors the egui sibling: winit doesn't
    # deliver these to the canvas reliably across browsers.
    "DragEvent",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "File",
    "FileList",
    "Blob",
    "BlobPropertyBag",
    "ClipboardEvent",
    "Clipboard",
    "Navigator",
    "Url",
] }
getrandom = { version = "0.4", features = ["wasm_js"] }
