[package]
name = "whisper-agent-host-daemon"
description = "Host-side daemon for the v2 host-env protocol — dials whisper-agent over WebSocket and provisions per-session sandboxes for incoming tool calls."
version = "0.3.20"
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "whisper-agent-host-daemon"
path = "src/main.rs"

[dependencies]
whisper-agent-protocol = { workspace = true }
whisper-agent-host-proto = { workspace = true }
whisper-agent-worker-proto = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "io-util", "io-std", "net", "sync", "time"] }
# `notify` for watching the local OAuth credential file the daemon
# is configured to publish. Same crate the imagegen daemon uses to
# watch whisper-agent.toml; same parent-dir-then-filter-by-basename
# pattern so editor `tmpfile + rename` saves don't kill the watch.
notify = "8"
# Read OAuth credentials and run refresh-token loops against the same
# file format the central server uses. Pulls in `CodexAuth` + the
# `from_contents`/`ensure_fresh` machinery so the daemon and the
# scheduler agree on what a valid `auth.json` looks like.
whisper-agent-auth = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
# Same chrono spec the auth crate uses — needed so the publisher can
# bridge `CodexAuth::next_refresh_at` (chrono::DateTime) into a
# tokio::time sleep duration.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# TOML config for the daemon itself (separate from the central
# server's whisper-agent.toml). One `[[publish_credential]]` table
# entry per credential file the daemon manages.
toml = "1"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
# Direct rustls dep so `main` can call `crypto::ring::default_provider()
# .install_default()` before any TLS work. rustls 0.23 panics on the
# first TLS use unless one provider is explicitly the process-wide
# default — `tokio-tungstenite`'s `rustls-tls-*` feature pulls rustls
# in but doesn't pick a provider for us.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
futures = "0.3"
axum = { workspace = true, features = ["ws"] }
http = "1"
serde = { workspace = true }
serde_json = { workspace = true }
ciborium = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["env"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
landlock = "0.4"
# libc for the daemon's socketpair(2) + dup2(2) calls in the worker
# spawn path. Used only inside the worker module's pre_exec closure.
libc = "0.2"
# Reconnect-jitter only — workers no longer need a per-session bearer
# (the IPC socket is the capability).
rand = "0.10"
# `tempfile` provides the default workspace handed to the startup probe
# worker. The probe never reads or writes files there — it only answers
# tools/list — but landlock requires *some* RW path in its ruleset, so
# we hand it a fresh tempdir that drops after the probe completes.
tempfile = "3"

[dev-dependencies]
# WS server harness for the integration tests — stand up a loopback
# axum server, mount /v1/host_env_link, dial it from the daemon library.
# Same versions the in-tree host_env_link server-side tests use, so
# both sides exercise the same wire types.
tokio-tungstenite = "0.28"
http = "1"
# Used by the credential publisher tests to mint JWTs with a desired
# `exp` claim. The auth crate consumes the same encoding.
base64 = "0.22"
