[package]
name = "whisper-agent-mcp-fetch"
description = "MCP server exposing a guarded web-fetch tool for whisper-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "whisper-agent-mcp-fetch"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
url = "2"
html2text = "0.16"
whisper-agent-mcp-proto = { path = "../whisper-agent-mcp-proto" }
