[package]
name = "whisper-agent-mcp-fetch"
description = "MCP server exposing a guarded web-fetch tool for whisper-agent"
version = "0.3.2"
edition.workspace = true
license.workspace = true

[[bin]]
name = "whisper-agent-mcp-fetch"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["net"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
html2text = "0.16"
whisper-agent-mcp-proto = { workspace = true }
